# cairn

./: .gitignore  Cargo.toml  README.md  dataset.toml
backend/: Cargo.toml
backend/src/: adapters.rs  core.rs  error.rs  main.rs  startup.rs
backend/src/adapters/: http.rs  querier.rs  replay.rs
backend/src/adapters/http/: clips_handler.rs  health_handlers.rs  schema_handler.rs
backend/src/adapters/querier/: helpers.rs  loaders.rs  querier.rs  session_context.rs
backend/src/adapters/replay/: recording_stream.rs  replay.rs
backend/src/core/: services.rs
backend/src/core/domain/: config.rs  model.rs
backend/src/core/ports/: inbound.rs
backend/src/core/ports/inbound/: data_query.rs  replay.rs
backend/src/core/ports/outbound/: data_store.rs  scene_logger.rs
backend/src/core/services/: data_query_service.rs  replay_service.rs
frontend/: Cargo.toml
frontend/src/: app.rs  client.rs  main.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
src/: adapters.rs  client.rs  core.rs  main.rs  startup.rs
src/adapters/: http.rs  querier.rs  visualizer.rs
src/adapters/http/: clips_handler.rs  query_handlers.rs
src/adapters/querier/: helpers.rs  querier.rs  register_helper.rs
src/adapters/replay/: replay.rs
src/adapters/visualizer/: visualizer.rs
src/app/: service.rs
src/core/: ports.rs
src/core/domain/: model.rs
src/core/ports/: data_query_service.rs  inbound.rs  outbound.rs  replay_service.rs  visualizer_service.rs
src/domain/: port.rs
src/inbound/: router.rs
src/outbound/: querier.rs
src/querier/: mod.rs  querier.rs
(+8 files in other folders)
