[package]
name = "cairn"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.0.0"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
datafusion = "52.3.0"
draco-rs = "0.1.3"
log = "0.4.29"
rerun = "0.30.2"
serde = "1.0.228"
simple_logger = "5.2.0"
tokio = { version = "1.50.0", features = ["full"] }
shared = { path = "../shared" }
serde_json = "1.0.149"
rayon = "1.11.0"
