[package]
name = "cairn-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.0"
egui = "0.29.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
rerun = { version = "0.30.2", features = ["native_viewer"] }
shared  = { path = "../shared" }