[package]
name = "cairn-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
shared = { path = "../shared" }
eframe = "0.34.1"
egui = "0.34.1"
tracing-subscriber = "0.3"
